# glam-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.dev2  Dockerfile.downloads  Dockerfile.tasks  README.md  apprunner.yaml  dev_reqs.txt  lambda_reqs.txt  pyproject.toml  supervisord.conf
glam_api/: cluster_health.py
glam_api/config/: asgi.py  settings.py  storage.py  storage_backends.py  urls.py  utils.py  wsgi.py
glam_api/config/local_settings/: dev_settings.py  prod_settings.py  sample_dev_settings.py  sample_prod_settings.py
glam_api/config/routers/: default.py  export.py
glam_api/glam/: admin.py  apps.py  filters.py  ingest.py  mixins.py  models.py  renderers.py  serializers.py  tasks.py  translation.py  urls.py  utils.py
glam_api/glam/fixtures/: crop.json  datasource.json  product.json  tag.json  variable.json
glam_api/glam/migrations/: 0001_initial.py  0002_alter_announcement_image_and_more.py  0002_auto_20221012_1758.py  0002_auto_20221212_0941.py  0002_auto_20230104_0955.py  0003_alter_productraster_file_object.py  0003_cropmask_mask_type.py  0003_rename_original_data_boundarylayer_source_data.py  0004_alter_boundarylayer_source_data_and_more.py  0004_auto_20221212_1033.py  0004_auto_20230104_1221.py  0005_auto_20221212_1114.py  0005_auto_20230106_1444.py  0006_alter_boundaryraster_file_object.py  0006_auto_20230110_1031.py  0007_alter_productraster_file_object.py  0007_auto_20221212_1133.py  0008_auto_20230113_1517.py  0008_cropmask_coverage.py  0009_auto_20230125_1717.py  0009_cropmaskraster_mask_type.py  (+6 more)
(+46 files in other folders)
