[tool.poetry]
name = "glam-api"
version = "0.2.0"
description = "NASA Harvest Global Agriculture Monitoring System (GLAM) API"
authors = ["John Keniston <jfkeniston@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
django = "^4.2"
rio-tiler = "^6.6.1"
django-storages = "^1.14.4"
django-cors-headers = "^4.4.0"
django-rest-framework = "^0.1.0"
django-filter = "^24.2"
pandas = "^2.2.2"
rest-pandas = "^1.1.0"
django-extensions = "^3.2.3"
drf-yasg = "^1.21.7"
django-modeltranslation = "^0.19.5"
django-admin-env-notice = "^1.0"
django-debug-toolbar = "^4.4.6"
django-q = "^1.3.9"
boto3 = "^1.34.148"
matplotlib = "^3.9.1"
shapely = "^2.0.5"
descartes = "^1.1.0"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
tqdm = "^4.66.4"
rio-cogeo = "^5.3.3"
rioxarray = "^0.17.0"
ipython = "^8.26.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
